ctools 6.x-1.0-dev
==================

#459716: content.theme.inc missing typo caused PHP error.
#455732 by dereine: Restore code to pull the title from the blocks table for block types.